CORE-9714: Fixing spacing issue when video is added in paragraph.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-article/component/_magazine-article-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-article/component/_magazine-article-detail.scss
@@ -57,7 +57,8 @@
       }
     }
 
-    .field--name-field-banner {
+    .field--name-field-banner,
+    .paragraph--type--video {
       margin-bottom: 1.25rem;
     }
 
